--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -79,11 +79,21 @@ section.contenedor section:nth-of-type(3) > h2 {
   color: white;
   font-weight: 300;
   margin-bottom: 16px;
+  align-self: center;
 }
 
 section.contenedor section:nth-of-type(3) > img {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
+
+  padding: 8px;
+  background: linear-gradient(to bottom right, white, #909090);
+  /* background-color: #cecece; */
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 8px;
+  margin-bottom: 16px;
+
 }
 
 section.contenedor section:nth-of-type(3) > h5:nth-of-type(1){
