Generamos nuevo modulo torneo

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -14,6 +14,7 @@
       <a class="nav-item nav-link" routerLink="/jugadores" >Jugadores</a>
       <a class="nav-item nav-link" routerLink="/equipos" >Equipos</a>
       <a class="nav-item nav-link" routerLink="/amistosos" >Amistosos</a>
+      <a class="nav-item nav-link" routerLink="/torneos" >Torneos</a>
     </div>
   </div>
 </nav>
