--- a/src/app/components/torneos/torneos.component.html
+++ b/src/app/components/torneos/torneos.component.html
@@ -1,3 +1,31 @@
 <section class="contenedor">
+  <h1>Torneo</h1>
+  <section class="torneo">
 
+    <section class="octavos">
+      <h4>Octavos</h4>
+      <article class="cuadro">
+        <span>Equipo 1 - Equipo 2</span>
+        <span>Equipo 3 - Equipo 4</span>
+        <span>Equipo 5 - Equipo 6</span>
+        <span>Equipo 7 - Equipo 8</span>
+
+        <span>Equipo 9 - Equipo 10</span>
+        <span>Equipo 11 - Equipo 12</span>
+        <span>Equipo 13 - Equipo 14</span>
+        <span>Equipo 15 - Equipo 16</span>
+
+      </article>
+    </section>
+    <section class="cuartos">
+      <h4>Cuartos</h4>
+    </section>
+    <section class="semifinales">
+      <h4>Semifinales</h4>
+    </section>
+    <section class="final">
+      <h2>Final</h2>
+    </section>
+
+  </section>
 </section>
