--- a/src/app/components/torneos/torneos.component.html
+++ b/src/app/components/torneos/torneos.component.html
@@ -2,18 +2,26 @@
   <h1>Torneo</h1>
   <section class="torneo">
 
-    <section class="octavos">
+    <section class="octavos" *ngIf="torneo.octavos.eliminatorias.length > 0">
       <h4>Octavos</h4>
       <article class="cuadro">
-        <span>Equipo 1 - Equipo 2</span>
-        <span>Equipo 3 - Equipo 4</span>
-        <span>Equipo 5 - Equipo 6</span>
-        <span>Equipo 7 - Equipo 8</span>
 
-        <span>Equipo 9 - Equipo 10</span>
-        <span>Equipo 11 - Equipo 12</span>
-        <span>Equipo 13 - Equipo 14</span>
-        <span>Equipo 15 - Equipo 16</span>
+        <div *ngFor="let e of torneo.octavos.eliminatorias">
+          <span class="ronda">Ronda {{e.ronda}}</span>
+          <span class="marcador">98 - 47</span>
+          <span class="boton"><i class="fas fa-basketball-ball"></i></span>
+          <span class="nombres"><img src="{{e.equipo1.bandera}}" width="25px" height="25px" style="padding: 16px;">{{e.equipo1.name}} - {{e.equipo2.name}}</span>
+        </div>
+
+
+        <!--<span>Equipo 3 - Equipo 4</span>-->
+        <!--<span>Equipo 5 - Equipo 6</span>-->
+        <!--<span>Equipo 7 - Equipo 8</span>-->
+
+        <!--<span>Equipo 9 - Equipo 10</span>-->
+        <!--<span>Equipo 11 - Equipo 12</span>-->
+        <!--<span>Equipo 13 - Equipo 14</span>-->
+        <!--<span>Equipo 15 - Equipo 16</span>-->
 
       </article>
     </section>
