--- a/src/app/components/torneos/torneos.component.css
+++ b/src/app/components/torneos/torneos.component.css
@@ -106,6 +106,13 @@ h1,h2,h3,h4,h5,h6{
   padding: 12px;
 }
 
+.spinner{
+  padding: 16px;
+  display: grid;
+  justify-self: center;
+  color: white;
+}
+
 
 
 
