--- a/src/app/components/torneos/torneos.component.css
+++ b/src/app/components/torneos/torneos.component.css
@@ -61,7 +61,7 @@ h1,h2,h3,h4,h5,h6{
 
   display: grid;
   grid-template-rows: auto auto;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 16px;
 }
 
@@ -70,40 +70,106 @@ h1,h2,h3,h4,h5,h6{
   background-color: #1d2124;
   border-radius: 5px;
   border:solid 1px rgba(255, 255, 255, 0.33);
-  text-align: center;
-  padding: 6px;
-
-
   display: grid;
-  grid-template-rows: auto auto;
-  grid-template-columns : 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto;
+  grid-template-columns : 1fr 1fr;
+  padding:6px;
+  grid-gap: 16px;
 
   grid-template-areas:
-    "ronda marcador boton"
-    "nombres nombres nombres"
+    "ronda         global"
+    "equipo1nombre equipo2nombre"
+    "equipo1escudo equipo2escudo"
+    "marcador1     marcador2"
+    "boton         boton"
 ;
-
 }
 
 .contenedor .torneo .octavos .cuadro div .ronda{
-  color: rgba(255, 255, 255, 0.33);
+  color: rgba(255, 255, 255, 0.62);
   grid-area: ronda;
-  justify-self: start;
+  border: solid 1px #ffffff3b;
+  padding: 3px 16px 3px 16px;
+  border-radius: 15px;
+  font-size: 12px;
+  justify-self: center;
 }
 
-.contenedor .torneo .octavos .cuadro div .marcador{
-  grid-area: marcador;
+.contenedor .torneo .octavos .cuadro div .marcador1{
+  grid-area: marcador1;
   justify-self: center;
+  font-size: 40px;
+}
+.contenedor .torneo .octavos .cuadro div .marcador2{
+  grid-area: marcador2;
+  justify-self: center;
+  font-size: 40px;
+}
+
+.contenedor .torneo .octavos .cuadro div .escudoEquipo1{
+  grid-area: equipo1escudo;
+  justify-self: center;
+  align-self: center;
+  background: linear-gradient(to bottom right, white, #909090);
+  border-radius: 50%;
+  border: solid #d8d8d8 1px;
+  padding: 10px;
+}
+
+.contenedor .torneo .octavos .cuadro div .escudoEquipo2 {
+  grid-area: equipo2escudo;
+  justify-self: center;
+  align-self: center;
+  background: linear-gradient(to bottom right, white, #909090);
+  border-radius: 50%;
+  border: solid #d8d8d8 3px;
+  padding: 10px;
+}
+
+.contenedor .torneo .octavos .cuadro div .global{
+  grid-area: global;
+  justify-self: center;
+
 }
 
 .contenedor .torneo .octavos .cuadro div .boton{
   grid-area: boton;
-  justify-self: end;
+  justify-self: center;
+  cursor: pointer;
+  padding: 1px 16px 1px 16px;
+  border: solid 1px white;
+  border-radius: 19px;
+  color: white;
+  background-color: #676a6c;
+  transition: all 0.2s ease-in-out
 }
 
-.contenedor .torneo .octavos .cuadro div .nombres{
-  grid-area: nombres;
+.contenedor .torneo .octavos .cuadro div .boton > i{
+  margin-left: 6px;
+}
+
+.contenedor .torneo .octavos .cuadro div .boton:hover{
+  color: rgba(255, 255, 255, 0.70);
+}
+
+.contenedor .torneo .octavos .cuadro div .boton:focus{
+  border: none;
+}
+
+
+.contenedor .torneo .octavos .cuadro div .nombres1{
+  grid-area: equipo1nombre;
   padding: 12px;
+  justify-self: center;
+  align-self: center;
+  font-size: 12px;
+}
+.contenedor .torneo .octavos .cuadro div .nombres2{
+  grid-area: equipo2nombre;
+  padding: 12px;
+  justify-self: center;
+  align-self: center;
+  font-size: 12px;
 }
 
 .spinner{
@@ -111,6 +177,8 @@ h1,h2,h3,h4,h5,h6{
   display: grid;
   justify-self: center;
   color: white;
+
+  margin-top: 250px;
 }
 
 
