--- a/src/app/components/torneos/torneos.component.html
+++ b/src/app/components/torneos/torneos.component.html
@@ -32,9 +32,10 @@
       </article>
     </section>
 
-    <!--<section class="cuartos">-->
-      <!--<h4>Cuartos</h4>-->
-    <!--</section>-->
+    <section class="cuartos" *ngIf="equiposCuartos.length === 8">
+      <h4>Cuartos</h4>
+
+    </section>
 
     <!--<section class="semifinales">-->
       <!--<h4>Semifinales</h4>-->
