--- a/src/app/components/torneos/torneos.component.html
+++ b/src/app/components/torneos/torneos.component.html
@@ -34,7 +34,20 @@
 
     <section class="cuartos" *ngIf="equiposCuartos.length === 8">
       <h4>Cuartos</h4>
-
+      <article class="cuadro">
+        <div *ngFor="let e of torneo.cuartos.eliminatorias">
+          <span class="ronda" *ngIf="e.ronda <= 7 && e.estadoEliminatoria.victorias_equipo1 !== 4 && e.estadoEliminatoria.victorias_equipo2 !== 4">Ronda {{e.ronda}}</span>
+          <span class="ronda" *ngIf="e.ronda > 7 || e.estadoEliminatoria.victorias_equipo1 === 4 || e.estadoEliminatoria.victorias_equipo2 === 4">Finalizada</span>
+          <span class="global">{{e.estadoEliminatoria.victorias_equipo1}} - {{e.estadoEliminatoria.victorias_equipo2}}</span>
+          <span class="nombres1">{{e.equipo1.name}}</span>
+          <span class="nombres2">{{e.equipo2.name}}</span>
+          <span class="escudoEquipo1"><img src="{{e.equipo1.escudo}}" width="50px"></span>
+          <span class="escudoEquipo2"><img src="{{e.equipo2.escudo}}" width="50px"></span>
+          <button class="boton" (click)="playGame(e)" [disabled]="e.ronda > 7 || e.estadoEliminatoria.victorias_equipo1 === 4 || e.estadoEliminatoria.victorias_equipo2 === 4">Jugar <i class="fas fa-basketball-ball"></i></button>
+          <span class="marcador1">{{e.ultimoPartido1}}</span>
+          <span class="marcador2">{{e.ultimoPartido2}}</span>
+        </div>
+      </article>
     </section>
 
     <!--<section class="semifinales">-->
