--- a/src/app/components/torneos/torneos.component.css
+++ b/src/app/components/torneos/torneos.component.css
@@ -24,12 +24,13 @@ h1,h2,h3,h4,h5,h6{
   display: grid;
   grid-area: torneo;
 
-  grid-template-rows: auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto;
   grid-template-columns: auto;
 
   grid-gap: 16px;
 
   grid-template-areas:
+    "campeon"
     "final"
     "semifinales"
     "cuartos"
@@ -92,6 +93,29 @@ h1,h2,h3,h4,h5,h6{
   text-align: center;
 }
 
+.contenedor .torneo .final{
+  display: grid;
+  grid-area: final;
+
+  grid-template-rows: auto auto;
+  grid-template-columns: auto;
+  grid-gap: 16px;
+
+  grid-template-areas:
+    "titulo"
+    "cuadro";
+}
+
+.contenedor .torneo .campeon{
+  display: grid;
+  grid-area: campeon;
+}
+
+.contenedor .torneo .final h4{
+  grid-area: titulo;
+  text-align: center;
+}
+
 .contenedor .torneo .cuadro{
   grid-area: cuadro;
 
@@ -105,7 +129,9 @@ h1,h2,h3,h4,h5,h6{
   color : white;
   background-color: #1d2124;
   border-radius: 5px;
-  border:solid 1px rgba(255, 255, 255, 0.33);
+  border-bottom: solid 2px rgba(134, 133, 133, 0.33);
+  border-right: solid 2px rgba(255, 255, 255, 0.33);
+  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.33);
   display: grid;
   grid-template-rows: auto auto auto auto;
   grid-template-columns : 1fr 1fr;
@@ -147,6 +173,7 @@ h1,h2,h3,h4,h5,h6{
   justify-self: center;
   align-self: center;
   background: linear-gradient(to bottom right, white, #909090);
+  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.33);
   border-radius: 50%;
   border: solid #d8d8d8 1px;
   padding: 10px;
@@ -157,6 +184,7 @@ h1,h2,h3,h4,h5,h6{
   justify-self: center;
   align-self: center;
   background: linear-gradient(to bottom right, white, #909090);
+  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.33);
   border-radius: 50%;
   border: solid #d8d8d8 3px;
   padding: 10px;
