--- a/src/app/components/equipos/equipos.component.css
+++ b/src/app/components/equipos/equipos.component.css
@@ -63,7 +63,7 @@ section.contenedor .detallesEquipo{
 
   display: grid;
   grid-template-rows: auto auto auto;
-  grid-template-columns: auto;
+  grid-template-columns: auto auto;
 
   background-color: #1d2124;
   border : solid #333333 thin;
@@ -83,6 +83,20 @@ section.contenedor .detallesEquipo .nombreEquipo{
     "escudoEquipo         nombreEquipo"
     "separador            separador"
 }
+
+section.contenedor .detallesEquipo .estrellas{
+  display: flex;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  justify-self: center;
+  align-self: center;
+  color: #ffac41;
+}
+
+section.contenedor .detallesEquipo .estrellas > * {
+  padding: 0 2px 0 2px;
+}
+
 
 section.contenedor .detallesEquipo .nombreEquipo > h2{
   color: white;
@@ -108,7 +122,7 @@ section.contenedor .detallesEquipo .nombreEquipo > hr {
 section.contenedor .detallesEquipo .medias{
   display: grid;
   grid-row: 2 / 3;
-  grid-column: 1 / 2;
+  grid-column: 1 / 3;
 
   grid-template-rows:auto auto auto auto;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -168,7 +182,7 @@ section.contenedor .detallesEquipo .medias td:nth-of-type(6){
 section.contenedor .detallesEquipo .listadoJugadores{
   display: grid;
   grid-row: 3 / 4;
-  grid-column: 1 / 2;
+  grid-column: 1 / 3;
 }
 
 hr{
