--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -15,6 +15,7 @@
       <a class="nav-item nav-link" routerLink="/equipos" >Equipos</a>
       <a class="nav-item nav-link" routerLink="/amistosos" >Amistosos</a>
       <a class="nav-item nav-link" routerLink="/torneos" >Torneos</a>
+      <a class="nav-item nav-link" routerLink="/historico" >Histórico</a>
     </div>
   </div>
 </nav>
